--- a/01_auth_api/package.json
+++ b/01_auth_api/package.json
@@ -12,12 +12,15 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.3",
+    "@types/pg": "^8.10.2",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.1"
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.11.1",
+    "uuid": "^9.0.0"
   }
 }
