--- a/02_find_user_country_by_ip/package.json
+++ b/02_find_user_country_by_ip/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01_auth_api",
+  "name": "02_find_user_country_by_ip",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -11,20 +11,12 @@
   "type": "module",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.3",
-    "@types/pg": "^8.10.2",
-    "@types/uuid": "^9.0.2",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "pg": "^8.11.1",
-    "uuid": "^9.0.0"
+    "express": "^4.18.2"
   }
 }
